resolves issues filter collapse and station chart map expand

--- a/resources/scss/pages/_high-tide-flooding.scss
+++ b/resources/scss/pages/_high-tide-flooding.scss
@@ -99,15 +99,21 @@
      width: 30% !important;
    }
 
-   #stations-map-row{
+   #stations-map-row {
      @include medium-min {
        height: calc(100% - 48px - 6px - 140px ) !important;
+       &.closed-filters {
+         height: calc(100% - 48px - 6px - 80px ) !important;
+       }
      }
    }
 
    #stations-graph-row {
      @include medium-min {
        height: calc(100% - 48px - 6px - 180px ) !important;
+       &.closed-filters {
+         height: calc(100% - 48px - 6px - 80px ) !important;
+       }
      }
    }
 
@@ -116,7 +122,7 @@
      // height: 100% !important;
 
      &.closed-filters {
-       .map-wrap {
+       .stations-map-wrap {
          height: 86% !important;
        }
      }
