--- a/resources/scss/pages/_historical-weather-data.scss
+++ b/resources/scss/pages/_historical-weather-data.scss
@@ -80,12 +80,18 @@
    #stations-map-row {
      @include medium-min {
        height: calc(100% - 48px - 6px - 140px ) !important;
+        &.closed-filters {
+          height: calc(100% - 48px - 6px ) !important;
+        }
      }
    }
 
    #stations-graph-row {
      @include medium-min {
        height: calc(100% - 48px - 6px - 205px ) !important;
+       &.closed-filters {
+         height: calc(100% - 48px - 6px ) !important;
+       }       
      }
    }
 
@@ -94,7 +100,7 @@
      // height: 100% !important;
 
      &.closed-filters {
-       .map-wrap {
+       .stations-map-wrap {
          height: 86% !important;
        }
      }
