--- a/resources/scss/pages/_local-climate-maps.scss
+++ b/resources/scss/pages/_local-climate-maps.scss
@@ -59,7 +59,7 @@
   }
 
   &.closed-filters {
-    height: calc(100% - 155px) !important;
+    height: calc(100% - 135px) !important;
     // .map-wrap {
       // height: calc(100% + 40px) !important;
     // }
